[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vastdb-nifi"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "snowch", email = "chsnow123@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyarrow", "vastdb"
]

[project.urls]
Documentation = "https://github.com/snowch/vastdb-nifi#readme"
Issues = "https://github.com/snowch/vastdb-nifi/issues"
Source = "https://github.com/snowch/vastdb-nifi"

[tool.hatch.version]
path = "src/vastdb_nifi/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/vastdb_nifi tests}"

[tool.coverage.run]
source_pkgs = ["vastdb_nifi", "tests"]
branch = true
parallel = true
omit = [
  "src/vastdb_nifi/__about__.py",
]

[tool.coverage.paths]
vastdb_nifi = ["src/vastdb_nifi", "*/vastdb-nifi/src/vastdb_nifi"]
tests = ["tests", "*/vastdb-nifi/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"